--- a/views/routes/itens.html
+++ b/views/routes/itens.html
@@ -9,6 +9,18 @@
     <script src="../scripts/script.js"></script>
 </head>
 <body>
-    <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
+    <!-- Nav-bar -->
+    <nav>
+        <div class="logo">
+            <i class='bx bx-donate-heart'></i> Logo da Página
+        </div>
+        <ul class="nav-links">
+            <li><a href="../routes/index.html">Início</a></li>
+            <li><a href="../routes/itens.html">Itens</a></li>
+            <li><a href="#como-funciona">Como Funciona</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+        </ul>
+        <a href="cadastro.html" class="btn-primary">Cadastrar Doação</a>
+    </nav>
 </body>
 </html>
