--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -9,20 +9,7 @@
     <script src="../scripts/script.js"></script>
 </head>
 <body>
-    <!-- Nav-bar -->
-    <nav>
-        <div class="logo">
-            <i class='bx bx-donate-heart'></i> Algum nome
-        </div>
-        <ul class="nav-links">
-            <li><a href="#inicio">Início</a></li>
-            <li><a href="../routes/itens.html">Itens</a></li>
-            <li><a href="#como-funciona">Como Funciona</a></li>
-            <li><a href="../routes/sobre.html">Sobre</a></li>
-        </ul>
-        <a href="cadastro.html" class="btn-primary">Cadastrar Doação</a>
-    </nav>
-
+    <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
     <!-- Hero Section -->
     <section class="hero" id="inicio">
         <h1>Conectando Doadores e ONGs</h1>
