--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -257,3 +257,11 @@ nav ul li{
     margin-bottom: 30px;
     opacity: 0.95;
 }
+
+form{
+    display: flex;
+    position:fixed;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
