--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -6,9 +6,73 @@
     <title>Página de Cadastro</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/barra-nav-script.js"></script>
 </head>
-<body>
+<body class="body-cadastro">
     <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
+    
+    <div class="container-form-cad">
+
+        <div class="coluna-form">
+
+            <div class="botoes-form">
+                <button class="botao trocar-cadastrar" id="cadastrar">Cadastrar</botao>
+                <button class="botao trocar-entrar" id="login">Entrar</botao>
+            </div>
+
+
+            <form action="#" method="#" class="caixa-form caixa-cadastrar">
+                <div class="titulo-form">
+                    <span>Cadastre-se</span>
+                </div>
+                <div class="inputs-form">
+                    <div class="caixa-input">
+                        <input type="text" class="inputs campo-input" placeholder="Insira seu nome" required>
+                        <i class='bx  bx-user'></i> 
+                    </div>
+                    <div class="caixa-input">
+                        <input type="email" class="inputs campo-input" placeholder="Insira seu email" required>
+                        <i class='bx  bx-envelope'></i> 
+                    </div>
+                        <div class="caixa-input">
+                        <input type="password" class="inputs campo-input" placeholder="Insira uma senha" required>
+                        <i class='bx  bx-lock'></i> 
+                    </div>
+                    <div class="esquecer-senha">
+                        <a href="#">Esqueci minha senha</a>
+                    </div>
+                    <div class="caixa-input">
+                        <button class="inputs botao-entrar">
+                            <span>Cadastrar</span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <form action="#" method="#" class="caixa-form caixa-entrar">
+                <div class="titulo-form">
+                    <span>Login</span>
+                </div>
+                <div class="inputs-form">
+                    <div class="caixa-input">
+                        <input type="email" class="inputs campo-input" placeholder="Insira seu email" required>
+                        <i class='bx  bx-envelope'></i> 
+                    </div>
+                        <div class="caixa-input">
+                        <input type="password" class="inputs campo-input" placeholder="Insira uma senha" required>
+                        <i class='bx  bx-lock'></i> 
+                    </div>
+                    <div class="caixa-input">
+                        <button class="inputs botao-entrar">
+                            <span>Entrar</span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            
+        </div>
+    </div>
+
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
