--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Início</title>
     <link rel="stylesheet" href="../styles/styles.css">
-    <link href='https://cdn.boxicons.com/3.0.6/css/boxicons.min.css' rel='stylesheet'>
-    <script src="../scripts/script.js"></script>
+    <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <script src="../scripts/barra-nav-script.js"></script>
 </head>
 <body>
     <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
