--- a/views/routes/sobre.html
+++ b/views/routes/sobre.html
@@ -6,7 +6,7 @@
     <title>Página de Sobre</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/barra-nav-script.js"></script>
 </head>
 <body>
     <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
