--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -8,6 +8,7 @@
     padding: 0;
     font-family: Montserrat, sans-serif;
     list-style-type: none;
+    scroll-behavior: smooth;
 }
 
 a{
@@ -19,6 +20,7 @@ a{
 
 nav{
     position: fixed;
+    z-index: 10;
     top: 0;
     left: 0;
     width: 100%;
@@ -27,6 +29,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     background-color: rgb(255, 255, 255);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .logo{
@@ -52,7 +55,6 @@ nav{
 
 #icone-menu{
     font-size: 1.8rem;
-    color: white;
     cursor: pointer;
     display: none;
     transition: color 0.3s ease;
@@ -61,38 +63,6 @@ nav{
 #icone-menu:hover{
     color: #ff9502;
 }
-
-/* Estilos responsivos para mobile */
-@media (max-width: 768px){
-
-#icone-menu{
-    display: block;
-}
-
-.paginas-nav{
-    position: absolute;
-    flex-direction: column;
-    text-align: center;
-    top:70px;
-    left: 0;
-    right:0;
-    gap: 0;
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 0.3s ease;
-    background: rgba(0, 0, 0, 0.8);
-}
-
-.paginas-nav.aberto {
-    max-height: 300px;
-}
-
-nav ul li{
-    padding: 1rem;
-}
-
-}
-
 
 /* Hero Section */
 .hero {
@@ -110,7 +80,6 @@ nav ul li{
 .hero p {
     font-size: 20px;
     margin-bottom: 40px;
-    opacity: 0.95;
 }
 
 .hero-buttons {
@@ -258,10 +227,185 @@ nav ul li{
     opacity: 0.95;
 }
 
-form{
+/* CSS da página de cadastro */
+
+.body-cadastro{
     display: flex;
-    position:fixed;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.container-form-cad {
+    display: flex;
+    width: 450px;
+    height: 500px;
+    border: 3px solid rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    overflow: hidden;
+    background-color: #c0afff;
+}
+
+.coluna-form {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.botoes-form {
+    display: flex;
     justify-content: center;
     gap: 10px;
-    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.botao {
+    font-weight: 500;
+    padding: 8px 30px;
+    border: none;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: .2s;
+}
+
+.trocar-cadastrar{
+    background-color: #71539c;
+}
+
+.botao:hover {
+    opacity:  0.85;
+}
+
+.caixa-form {
+    position: absolute;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 0 30px;
+    transition: .3s;
+}
+
+.caixa-cadastrar {
+    left: 50%;
+}
+
+.caixa-entrar {
+    left: -50%;
+    margin-top: 30px;
+}
+
+.inputs-form {
+    width: 100%;
+}
+
+.caixa-input{
+    position: relative;
+}
+
+.inputs {
+    width: 100%;
+    height: 55px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 50px;
+}
+
+.campo-input {
+    font-size: 16px;
+    padding: 0 40px 0 20px;
+    outline: none;
+}
+
+.caixa-input .bx{
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    width: 17px;
+    height: 17px;
+}
+
+.titulo-form {
+    margin: 30px 0;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.esquecer-senha {
+    display: flex;
+    justify-content: right;
+    gap: 5px;
+}
+
+.esquecer-senha a {
+    color: black;
+    font-size: 14px;
+}
+
+.esquecer-senha a:hover {
+    text-decoration: underline;
+}
+
+.botao-entrar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: white;
+    background-color: #71539c;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.botao-entrar:hover {
+    gap: 15px;
+}
+
+/* Estilos responsivos para mobile */
+@media (max-width: 768px){
+
+#icone-menu{
+    display: block;
+}
+
+.paginas-nav{
+    position: absolute;
+    flex-direction: column;
+    text-align: center;
+    top: 61px;
+    left: 0;
+    right:0;
+    gap: 0;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.4s ease;
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
+}
+
+.paginas-nav.aberto {
+    max-height: 300px;
+}
+
+nav ul li {
+   
+}
+
+.paginas-nav a {
+    display: block;
+    padding: 1rem;
+    color: white;
+    transition: ease 0.4s;
+}
+
+.paginas-nav a:hover {
+    color: white;
+    background: rgba(0, 0, 0, 0.3);
+
+}
+
 }
