Teste de conexão com o back

--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -21,21 +21,21 @@
             </div>
 
 
-            <form action="#" method="#" class="caixa-form caixa-cadastrar">
+            <form action="/cadastro" method="post" class="caixa-form caixa-cadastrar">
                 <div class="titulo-form">
                     <span>Cadastre-se</span>
                 </div>
                 <div class="inputs-form">
                     <div class="caixa-input">
-                        <input type="text" class="inputs campo-input" placeholder="Insira seu nome" required>
+                        <input type="text" name="name" class="inputs campo-input" placeholder="Insira seu nome" required>
                         <i class='bx  bx-user'></i> 
                     </div>
                     <div class="caixa-input">
-                        <input type="email" class="inputs campo-input" placeholder="Insira seu email" required>
+                        <input type="email" name="email" class="inputs campo-input" placeholder="Insira seu email" required>
                         <i class='bx  bx-envelope'></i> 
                     </div>
                         <div class="caixa-input">
-                        <input type="password" class="inputs campo-input" placeholder="Insira uma senha" required>
+                        <input type="password" name="password" class="inputs campo-input" placeholder="Insira uma senha" required>
                         <i class='bx  bx-lock'></i> 
                     </div>
                     <div class="esquecer-senha">
