--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -42,7 +42,7 @@
                         <a href="#">Esqueci minha senha</a>
                     </div>
                     <div class="caixa-input">
-                        <button class="inputs botao-entrar">
+                        <button type="submit" class="inputs botao-entrar">
                             <span>Cadastrar</span>
                         </button>
                     </div>
