pequenas mudanças visuais e checkbox de ong

--- a/views/extras/barra-navegacao.html
+++ b/views/extras/barra-navegacao.html
@@ -1,10 +1,10 @@
 <nav> <!-- HTML da barra de navegação -->
-    <div class="logo">Logo da Página</div>
+    <div class="logo"><img src="../imgs/logo.png"></div>
     <i class='bx  bx-menu-search' id="icone-menu"></i> <!-- Ícone de menu -->
     <ul class="paginas-nav">
         <li><a href="../routes/index.html">Início</a></li>
-        <li><a href="../routes/itens.html">Itens</a></li>
-        <li><a href="../routes/cadastro.html">Cadastre-se</a></li>
+        <li><a href="../routes/doacoes.html">Doações</a></li>
         <li><a href="../routes/sobre.html">Sobre</a></li>
+        <li><a href="../routes/cadastro.html">Cadastre-se</a></li>
     </ul>
 </nav>
