--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -26,6 +26,10 @@
                     <span>Cadastre-se</span>
                 </div>
                 <div class="inputs-form">
+                    <div class="checkbox-ong">
+                        <input name="tipo-usuario" value="ong" id="tipo-usuario" type="checkbox">
+                        <label for ="tipo-usuario">Cadastrar como ONG</label>
+                    </div>
                     <div class="caixa-input">
                         <input type="text" name="name" class="inputs campo-input" placeholder="Insira seu nome" required>
                         <i class='bx  bx-user'></i> 
