--- a/views/extras/barra-navegacao.html
+++ b/views/extras/barra-navegacao.html
@@ -1,5 +1,7 @@
 <nav> <!-- HTML da barra de navegação -->
-    <div class="logo"><img src="../imgs/logo.png"></div>
+    <div class="logo">
+        <a href="../routes/index.html"><img src="../imgs/logo.png"></a>
+    </div>
     <i class='bx  bx-menu-search' id="icone-menu"></i> <!-- Ícone de menu -->
     <ul class="paginas-nav">
         <li><a href="../routes/index.html">Início</a></li>
