--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -1,4 +1,4 @@
-/* Importação da fonte Montserrat do Google Fonts */
+/* Importação das fontes do Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Unkempt:wght@400;700&display=swap');
 
 /* CSS reset e estilos globais */
@@ -99,7 +99,6 @@ nav{
     border-radius: 25px;
     text-decoration: none;
     font-weight: 600;
-    transition: color 0.3s;
     transition: ease 0.3s;
 }
 
@@ -229,8 +228,17 @@ nav{
 
 .cta-section p {
     font-size: 18px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     opacity: 0.95;
+}
+
+.cta-section .btn-secondary {
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+
+.cta-section .btn-secondary:hover {
+    transform: translateY(-4px);
 }
 
 /* CSS da página de cadastro */
@@ -247,10 +255,12 @@ nav{
     display: flex;
     width: 450px;
     height: 500px;
+    margin-top: 45px;
     border: 5px solid rgba(255, 255, 255, 0.2);
     border-radius: 30px;
     overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(3px);
 }
 
 .coluna-form {
@@ -271,7 +281,7 @@ nav{
     padding: 8px 30px;
     border: none;
     border-radius: 30px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.3);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: .2s;
@@ -365,6 +375,7 @@ nav{
     color: white;
     background-color: #6aa3dd;
     cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     transition: .3s;
 }
 
@@ -390,8 +401,7 @@ nav{
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.4s ease;
-    background: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(5px);
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .paginas-nav.aberto {
