configurando boolean isONG

--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="inputs-form">
                     <div class="checkbox-ong">
-                        <input name="tipo-usuario" value="ong" id="tipo-usuario" type="checkbox">
+                        <input name="isONG" value="ong" id="tipo-usuario" type="checkbox">
                         <label for ="tipo-usuario">Cadastrar como ONG</label>
                     </div>
                     <div class="caixa-input">
@@ -45,6 +45,7 @@
                     <div class="esquecer-senha">
                         <a href="#">Esqueci minha senha</a>
                     </div>
+                    
                     <div class="caixa-input">
                         <button type="submit" class="inputs botao-entrar">
                             <span>Cadastrar</span>
