--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -15,8 +15,8 @@
         <h1>Conectando Doadores e ONGs</h1>
         <p>O ShareSpot é uma plataforma simples para quem quer doar encontrar quem precisa receber. <br>Alimentos, roupas e muito mais.</p>
         <div class="hero-buttons">
-            <a href="cadastro.html" class="btn-secondary">Quero Doar</a>
-            <a href="#como-funciona" class="btn-secondary">Como Funciona</a>
+            <a href="/cadastro" class="btn-secondary">Quero Doar</a>
+            <a href="/#como-funciona" class="btn-secondary">Como Funciona</a>
         </div>
     </section>
 
