--- a/views/extras/barra-navegacao.html
+++ b/views/extras/barra-navegacao.html
@@ -1,6 +1,6 @@
 <nav> <!-- HTML da barra de navegação -->
     <div class="logo">
-        <a href="../routes/index.html"><img src="../imgs/logo.png"></a>
+        <a href="../routes/index.html"><img alt="ShareSpot" src="../imgs/logo.png"></a>
     </div>
     <i class='bx  bx-menu-search' id="icone-menu"></i> <!-- Ícone de menu -->
     <ul class="paginas-nav">
