--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Cadastro</title>
+    <title>ShareSpot | Cadastro</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
     <script src="../scripts/barra-nav-script.js"></script>
 </head>
 <body class="body-cadastro">
@@ -22,9 +23,9 @@
 
 
             <form action="/cadastro" method="post" class="caixa-form caixa-cadastrar">
-                <div class="titulo-form">
-                    <span>Cadastre-se</span>
-                </div>
+                
+                <span class="titulo-form">Cadastre-se</span>
+                
                 <div class="inputs-form">
                     <div class="checkbox-ong">
                         <input name="isONG" value="ong" id="tipo-usuario" type="checkbox">
@@ -55,9 +56,8 @@
             </form>
 
             <form action="/login" method="post" class="caixa-form caixa-entrar">
-                <div class="titulo-form">
-                    <span>Login</span>
-                </div>
+    
+                <span class="titulo-form">Login</span>
                 <div class="inputs-form">
                     <div class="caixa-input">
                         <input type="email" name="email" class="inputs campo-input" placeholder="Insira seu email" required>
