--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Itens</title>
+    <title>ShareSpot | Doações</title>
+    <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <script src="../scripts/barra-nav-script.js"></script>
