--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShareSpot | Home</title>
+    <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <script src="../scripts/barra-nav-script.js"></script>
@@ -57,19 +58,19 @@
         <h2>Como Funciona</h2>
         <div class="steps">
             <div class="step">
-                <div class="step-number">1</div>
+                <h3 class="step-number">1</h3>
                 <h3>Cadastre sua Doação</h3>
                 <p>Preencha um formulário simples com o que você quer doar, quantidade e disponibilidade.</p>
             </div>
 
             <div class="step">
-                <div class="step-number">2</div>
+                <h3 class="step-number">2</h3>
                 <h3>ONGs Visualizam</h3>
                 <p>Organizações parceiras e pessoas interessadas podem ver sua doação disponível no ShareSpot.</p>
             </div>
 
             <div class="step">
-                <div class="step-number">3</div>
+                <h3 class="step-number">3</h3>
                 <h3>Contato Direto</h3>
                 <p>Doador e receptor entram em acordo sobre coleta ou entrega, como na OLX, mas para o bem.</p>
             </div>
