--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShareSpot | Doações</title>
-    <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <script src="../scripts/barra-nav-script.js"></script>
-</head>
-<body>
-    <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
-</body>
+<html lang="pt">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ShareSpot | Doações</title>
+        <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
+        <link rel="stylesheet" href="../styles/styles.css">
+        <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
+        <script src="../scripts/barra-nav-script.js"></script>
+    </head>
+    <body>
+        <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
+    </body>
 </html>
