--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -30,6 +30,7 @@ nav{
     align-items: center;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
 }
 
@@ -260,7 +261,9 @@ nav{
     border-radius: 30px;
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.2);
+    -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
+    
 }
 
 .coluna-form {
