--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -28,7 +28,7 @@
                     
                     <div class="inputs-form">
                         <div class="checkbox-ong">
-                            <input name="isONG" value="ong" id="tipo-usuario" type="checkbox">
+                            <input name="isONG" value="true" id="tipo-usuario" type="checkbox">
                             <label for ="tipo-usuario">Cadastrar como ONG</label>
                         </div>
                         <div class="caixa-input">
