Teste inicial de um produto com lista

--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -11,5 +11,26 @@
     </head>
     <body>
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
+
+        <div class="catalogo">
+
+            <ul class="lista-itens">
+                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais <i class='bx  bx-search'></i></button>
+                        </span>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+
     </body>
 </html>
