Botão de adicionar

--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -24,13 +24,17 @@
                         <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
                         <span class="linha-doador">
                             <p class="nome-doador">Nome do doador</p>
-                            <button class="botao-saber">Saber Mais <i class='bx  bx-search'></i></button>
+                            <button class="botao-saber">Saber Mais</button>
                         </span>
                     </div>
                 </li>
             </ul>
 
         </div>
+
+        <button class="btn-adicionar">
+            <a href="cadastrar-doacao.html">Adicionar uma doação</a>
+        </button>
 
     </body>
 </html>
