--- a/views/routes/doacoes.ejs
+++ b/views/routes/doacoes.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ShareSpot | Doações</title>
+        <title>ShareSpot | Usuarios</title>
         <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
         <link rel="stylesheet" href="../styles/styles.css">
         <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
@@ -11,7 +11,13 @@
     </head>
     <body>
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
-        <script src="../scripts/doacoes-script.js"></script>
+        <h1>Usuarios</h1>
+        <ul>
+            <% users.forEach(user => { %>
+                <li><strong><%= user.name %></strong>><%= user.email %></li>
+            <%
+            }); %>
+        </ul>
     </body>
     
 </html>
